[tool.poetry]
name = "flask-tutorial"
version = "0.1.0"
description = "Following the official tutorial."
authors = ["Julius Huizing <J.B.Huizing@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
